--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">FlickrImageViewer</string>
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
+    <string name="action_search" />
+    <string name="title_activity_search">SearchActivity</string>
+    <string name="searchable_hint" />
+    <string name="title_activity_search2">SearchActivity2</string>
 </resources>
