--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_search">SearchActivity</string>
     <string name="searchable_hint" />
     <string name="title_activity_search2">SearchActivity2</string>
+    <string name="title_activity_view_photo">ViewPhotoActivity</string>
 </resources>
